Update CNN_Traffic Signs Classification.ipynb

--- a/Computer Vision/Traditional ML/Image Classification/CNN_Traffic Signs Classification.ipynb
+++ b/Computer Vision/Traditional ML/Image Classification/CNN_Traffic Signs Classification.ipynb
@@ -1015,7 +1015,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 657
         },
-        "outputId": "b9d111ca-297f-4cf4-ca2e-1e9b326237fb"
+        "outputId": "93aefd93-ed58-45a9-ca7c-2579962e1511"
       },
       "source": [
         "\n",
@@ -1027,7 +1027,7 @@
         "\n",
         "print(\"Predicted Sign\" + str(final_model.predict(x_test_final[990].reshape(1, 32, 32, 1))))\n"
       ],
-      "execution_count": 29,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -1069,6 +1069,34 @@
           "metadata": {
             "needs_background": "light"
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xfj4Wxd8L52C",
+        "outputId": "51e8d542-9467-4389-9da0-e8bc83a26353"
+      },
+      "source": [
+        "predict_x=final_model.predict(x_test_final[1700].reshape(1, 32, 32, 1))\n",
+        "classes_x=np.argmax(predict_x,axis=1)\n",
+        "classes_x"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([6])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
         }
       ]
     },
@@ -1229,6 +1257,34 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GXE8hdK2M6MI",
+        "outputId": "3e6385d9-b604-4c7e-86a6-667adbe2add3"
+      },
+      "source": [
+        "predict_x1=final_model.predict(x_test_final[1832].reshape(1, 32, 32, 1))\n",
+        "classes_x1=np.argmax(predict_x1,axis=1)\n",
+        "classes_x1"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([5])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "qPc0G00_v7wW"
@@ -1247,7 +1303,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "55b96a40-0583-4b0e-e50e-8857d0ee2486"
+        "outputId": "94ca4ae0-7633-4c0a-e61d-44a4eff83494"
       },
       "source": [
         "from tensorflow.keras.models import load_model\n",
@@ -1268,40 +1324,20 @@
         "\n",
         "img = np.reshape(img,[1,32,32,1])\n",
         "\n",
-        "classes = final_model.predict(img)\n",
-        "\n",
+        "predict_test = final_model.predict(img)\n",
+        "classes=np.argmax(predict_test,axis=1)\n",
         "print(classes)"
       ],
-      "execution_count": 35,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "WARNING:tensorflow:5 out of the last 8 calls to <function Model.make_predict_function.<locals>.predict_function at 0x7f3ae2eabef0> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
-            "[[2.9919073e-17 4.2742503e-16 8.7884028e-18 1.0080345e-15 3.8167071e-13\n",
-            "  1.2312493e-16 3.6642674e-16 2.8086236e-16 4.3267601e-17 6.0730019e-19\n",
-            "  1.4663606e-14 2.0676923e-07 1.4355930e-17 2.1696641e-17 3.2200902e-16\n",
-            "  2.6628690e-14 1.1325290e-16 6.0689522e-18 9.9998772e-01 2.0248693e-10\n",
-            "  2.3120708e-11 1.2408301e-09 6.9628155e-14 1.8876763e-11 1.0656869e-06\n",
-            "  2.0467946e-12 2.7110227e-06 8.2146007e-06 3.8611603e-09 1.6418446e-11\n",
-            "  3.1609316e-11 3.5084600e-12 7.2502453e-17 3.8135215e-16 6.6794969e-16\n",
-            "  1.5598836e-12 1.6166906e-13 3.2690254e-14 3.1421524e-15 1.6951465e-17\n",
-            "  1.7852783e-14 8.7530419e-17 1.3297398e-16]]\n"
+            "[18]\n"
           ],
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "hBPbatbDRj4x"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
