Update CNN_Traffic Signs Classification.ipynb

--- a/Computer Vision/Traditional ML/Image Classification/CNN_Traffic Signs Classification.ipynb
+++ b/Computer Vision/Traditional ML/Image Classification/CNN_Traffic Signs Classification.ipynb
@@ -158,7 +158,7 @@
         "outputId": "a1c75727-9a55-423c-937f-2df986ff707c"
       },
       "source": [
-        "#data = pd.read_csv(\"german-traffic-signs / signnames.csv\") \n",
+        "# Dataset: https://www.kaggle.com/valentynsichkar/traffic-signs-preprocessed \n",
         "  \n",
         "with open('/content/drive/My Drive/Image Classification/train.pickle', 'rb') as f: \n",
         "    train_data = pickle.load(f) \n",
